Adding search option
