# backend/target/generated-sources/swagger/src/main/java/io/swagger/api/TherapistApi.java
@@ -22,7 +22,7 @@ import javax.validation.Valid;
 
 @Path("/therapist")
 
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJAXRSSpecServerCodegen", date = "2024-01-22T15:50:22.220+05:30[Asia/Calcutta]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.JavaJAXRSSpecServerCodegen", date = "2024-02-01T15:15:42.261+05:30[Asia/Calcutta]")
 public interface TherapistApi {
 
     @POST
@@ -59,6 +59,25 @@ public interface TherapistApi {
     Therapist getTherapist( @PathParam("therapistId")
 
  @Parameter(description = "The unique therapist ID") String therapistId
+);
+    @GET
+    @Path("/search")
+    @Produces({ "application/json" })
+    @Operation(summary = "Get details of therapist name, type or area given by the client", description = "Returns the details of the therapist name, type or area given by client", tags={ "Therapist" })
+    @ApiResponses(value = { 
+        @ApiResponse(responseCode = "211", description = "Successfully returned a list of therapists", content = @Content(schema = @Schema(implementation = TherapistList.class))),
+        @ApiResponse(responseCode = "4XX", description = ""),
+        @ApiResponse(responseCode = "5XX", description = ""),
+        @ApiResponse(responseCode = "200", description = "Success") })
+    TherapistList getTherapistByNTA(  @QueryParam("therapistName") 
+
+ @Parameter(description = "Name of therapist being searched")  String therapistName
+,  @QueryParam("therapistType") 
+
+ @Parameter(description = "Type of therapist being searched")  String therapistType
+,  @QueryParam("therapistArea") 
+
+ @Parameter(description = "Area of therapist being searched")  String therapistArea
 );
     @GET
     @Produces({ "application/json" })
