# backend/target/generated-sources/swagger/swagger.json
@@ -258,6 +258,69 @@
           "passthroughBehavior" : "never"
         }
       }
+    },
+    "/therapist/search" : {
+      "summary" : "Operations on searching a therapist by therapist name, type or area",
+      "description" : "Contains the list of operations for clients to search therapists by their name, type or area",
+      "get" : {
+        "tags" : [ "Therapist" ],
+        "summary" : "Get details of therapist name, type or area given by the client",
+        "description" : "Returns the details of the therapist name, type or area given by client",
+        "operationId" : "getTherapistByNTA",
+        "parameters" : [ {
+          "name" : "therapistName",
+          "in" : "query",
+          "description" : "Name of therapist being searched",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        }, {
+          "name" : "therapistType",
+          "in" : "query",
+          "description" : "Type of therapist being searched",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string",
+            "enum" : [ "Psychologist", "Psychiatrist", "Counsellor" ]
+          }
+        }, {
+          "name" : "therapistArea",
+          "in" : "query",
+          "description" : "Area of therapist being searched",
+          "required" : false,
+          "style" : "form",
+          "explode" : true,
+          "schema" : {
+            "type" : "string"
+          }
+        } ],
+        "responses" : {
+          "211" : {
+            "description" : "Successfully returned a list of therapists",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/TherapistList"
+                }
+              }
+            }
+          },
+          "4XX" : {
+            "$ref" : "#/components/responses/4XXResponse"
+          },
+          "5XX" : {
+            "$ref" : "#/components/responses/5XXResponse"
+          },
+          "default" : {
+            "description" : "Success"
+          }
+        }
+      }
     }
   },
   "components" : {
